--- a/PackageRZ/PackageRZ.csproj
+++ b/PackageRZ/PackageRZ.csproj
@@ -25,6 +25,8 @@
   <ItemGroup>
 	  <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
+	  <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
