--- a/PackageRZ/PackageRZ.csproj
+++ b/PackageRZ/PackageRZ.csproj
@@ -8,14 +8,19 @@
     <Title>PackageRafaelZC</Title>
     <PackageProjectUrl>https://github.com/Rafael-Zancanaro/HelperPackage</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Rafael-Zancanaro/HelperPackage#readme</RepositoryUrl>
-    <FileVersion>1.0.4</FileVersion>
-    <Version>6.0.0</Version>
+    <FileVersion>1.0.5</FileVersion>
+    <Version>6.0.1</Version>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <AnalysisLevel>latest</AnalysisLevel>
+    <PackageLicenseFile>License.md</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="C:\Users\rafa1\OneDrive\Documentos\License.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
